--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FRANCEZCA CORTES</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="css/lightbox.css" rel="stylesheet" />
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +57,7 @@
             <div class="box">
               
               <div class="dream">
-                <img src="digi/1.png">
+                <a href="digi/1.png" data-lightbox="image-1" data-title="My caption">Image #1</a>
                  <img src="digi/2.png">
                   <img src="digi/3.jpg">
                    <img src="digi/4.png">
@@ -152,5 +153,6 @@
         dolores illum?
       </p> -->
     </div>
+    <script src="path/to/lightbox.js"></script>
   </body>
 </html>
