--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="box">
               
               <div class="dream">
-                <a href="digi/1.png" data-lightbox="image-1" data-title="My caption">Image #1</a>
+                <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
                  <img src="digi/2.png">
                   <img src="digi/3.jpg">
                    <img src="digi/4.png">
