--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h3>Illustrations</h3>
             </div>-->
             <div class="box">
-              
+              <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
               <div class="dream">
                 <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
                  <img src="digi/2.png">
