--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </div>
 
     <div class="main">
+      <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
 
         <div class="container">
             <!--<div class="heading">
