--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
         dolores illum?
       </p> -->
     </div>
-    <script src="path/to/lightbox.js"></script>
+    <script src="js/lightbox-plus-jquery.js"></script>
   </body>
 </html>
