--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         dolores illum?
       </p> -->
     </div>
-    <script src="js/lightbox.js"></script>
+
+    <script src="js/lightbox-plus-jquery.js"></script>
   </body>
 </html>
