--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       </p> -->
     </div>
 
-    <script src="js/lightbox-plus-jquery.js"></script>
+    <script src="js/JQuery.js"></script>
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
