--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FRANCEZCA CORTES</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="css/lightbox.css" rel="stylesheet" />
+    <link href="css/lightbox.min.css" rel="stylesheet" />
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -157,6 +157,6 @@
     </div>
 
     <script src="js/JQuery.js"></script>
-    <script src="js/lightbox.js"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
