--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!--<div class="heading">
               <h3>Illustrations</h3>
             </div>-->
-            <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
+            <a href="" data-lightbox="image-1" data-title="My caption"><img src="digi/1.png"></a>
             <div class="box">
               <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
               <div class="dream">
