--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
     </div>
 
     <div class="main">
-      <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
 
         <div class="container">
             <!--<div class="heading">
               <h3>Illustrations</h3>
             </div>-->
-            <a href="" data-lightbox="image-1" data-title="My caption"><img src="digi/1.png"></a>
+            <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"><img src="digi/1.png"></a>
             <div class="box">
               <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"></a>
               <div class="dream">
