--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>-->
             <div class="box">
               <div class="dream">
-                <a href="digi/1.png" data-lightbox="image-1" data-title="My caption"><img src="digi/1.png"></a>
-                 <img src="digi/2.png">
+                <a href="digi/1.png" data-lightbox="digi" data-title="My caption"><img src="digi/1.png"></a>
+                  <a href="digi/2.png" data-lightbox="digi" data-title="My caption"><img src="digi/2.png"></a>
                   <img src="digi/3.jpg">
                    <img src="digi/4.png">
                     <img src="digi/5.png">
