--- a/trad.html
+++ b/trad.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FRANCEZCA CORTES</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="dist/css/lightbox.min.css" rel="stylesheet" />
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -154,5 +155,7 @@
         dolores illum?
       </p> -->
     </div>
+    <script src="dist/js/JQuery.js"></script>
+    <script src="dist/js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
