--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="dream">
                 <a href="digi/1.png" data-lightbox="digi" data-title="Photo Study and Fanart of Joshua Hong from the K-pop group SEVENTEEN"><img src="digi/1.png"></a>
                   <a href="digi/2.png" data-lightbox="digi" data-title="“Anthropocene”"><img src="digi/2.png"></a>
-                    <a href="digi/3.jpg" data-lightbox="digi" data-title="“Wings”"><img src="digi/3.jpg"></a>
+                    <a href="digi/3.jpg" data-lightbox="digi" data-title="“Going High”"><img src="digi/3.jpg"></a>
                       <a href="digi/4.png" data-lightbox="digi" data-title="“Future”"><img src="digi/4.png"></a>
                         <a href="digi/5.png" data-lightbox="digi" data-title="“Ares - the seer” - Character Sheet"><img src="digi/5.png"></a>
                     
