--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <a href="digi/3.jpg" data-lightbox="digi" data-title="“Going High” (Program used: Clip Studio Paint)"><img src="digi/3.jpg"></a>
                       <a href="digi/4.png" data-lightbox="digi" data-title="“Future” (Program used: Clip Studio Paint)"><img src="digi/4.png"></a>
                         <a href="digi/5.png" data-lightbox="digi" data-title="“Ares - the seer” - Character Sheet (Program used: Clip Studio Paint)"><img src="digi/5.png"></a>
-                          <a href="digi/rannifullmon.PNG" data-lightbox="digi" data-title="Ranni - Fanart of Ranni from Elden Ring (Program used: Clip Studio Paint)"><img src="rannifullmon.PNG"></a>
-                            <a href="digi/fish.PNG" data-lightbox="digi" data-title="“Daydream” (Program used: Clip Studio Paint)"><img src="fish.PNG"></a>
+                          <a href="digi/rannifullmon.png" data-lightbox="digi" data-title="Ranni - Fanart of Ranni from Elden Ring (Program used: Clip Studio Paint)"><img src="digi/rannifullmon.png"></a>
+                          <a href="digi/fish.PNG" data-lightbox="digi" data-title="“Daydream” (Program used: Clip Studio Paint)"><img src="digi/fish.PNG"></a>
                     
               </div>
         
