--- a/graphic.html
+++ b/graphic.html
@@ -71,6 +71,7 @@
                 <div class="dream">
                   <a href="design/5.png" data-lightbox="design" data-title="Magazine Spread for Kween Yasmin Asistido (Program used: Adobe Illustrator, Adobe Photoshop, Adobe InDesign)"><img src="design/5.png"></a>
                     <a href="design/6.png" data-lightbox="design" data-title="Magazine Cover (Program used: Adobe Photoshop)"><img src="design/6.png"></a>
+                      <a href="design/SIOHAP.jpg" data-lightbox="design" data-title="Poster for a Webinar (Program used: Adobe Photoshop and Illustrator)"><img src="design/SIOHAP.jpg"></a>
 
                     
               </div>
